Small style adjustements to fix cropped text

--- a/src/assets/stylesheets/scss/_shadowbox.scss
+++ b/src/assets/stylesheets/scss/_shadowbox.scss
@@ -15,6 +15,7 @@
 .shadow-box {
   box-shadow: 0 0 20px rgba(#000, 0.25);
   background-color: #fff;
+  color: #000;
   
   &+.shadow-box {
     margin-top: $gutter-l;
